# nbody-gpu

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/: camera.cpp  camera.hpp  constants.hpp  error_log.hpp  main.cpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
